--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>project-practices-2</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <div class="header-container">
                 <h1 class="logo">Ma<span class="extra-letter">r</span>y</h1>
@@ -17,12 +17,29 @@
                     <li><a href="#">blog</a></li>
                     <li> <a href="#"><button class="btn">hire me</button></a></li>
                 </div>
+                
 
             </div>
         </nav>
+        <div class="container">
+            <div class="container-left">
+                <h3 class="common-h3">Hi, I  am</h3>
+                <h1>Mary Hardy</h1>
+                <p class="common-p">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn">Download CV</button>
+                <button class="btn">Contact</button>
+
+
+            </div>
+            <div class="container-right">
+                <img class="hardy" src="images/hardy.png" alt="">
+
+            </div>
+        </div>
 
     </header>
-    <main></main>
+    <main>
+    </main>
     <footer></footer>
 </body>
 </html>
