--- a/index.html
+++ b/index.html
@@ -23,22 +23,45 @@
         </nav>
         <div class="container">
             <div class="container-left">
-                <h3 class="common-h3">Hi, I  am</h3>
+                <h5 class="common-h3">Hi, I  am</h5>
                 <h1>Mary Hardy</h1>
                 <p class="common-p">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn">Download CV</button>
-                <button class="btn">Contact</button>
+                <div class="button">
+                <button class="btn bts">Download CV</button>
+                <button class="btn btns">
+                     Contact</button>
+            </div>
 
 
             </div>
             <div class="container-right">
                 <img class="hardy" src="images/hardy.png" alt="">
 
+
             </div>
         </div>
 
     </header>
     <main>
+        <div class="about-container">
+            <h3 class="title"> About Me </h3>
+            <p class="para">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <table>
+                <tr class="th">
+                    <td>Name:</td>
+                    <td>Email:</td>
+                    <td>date of birth</td>
+                    <td>form</th>
+                </tr>
+                <tr class="td">
+                    <th>Mary Hardy</th>
+                    <th>info@gmail.com</th>
+                    <th>11 November 1987</th>
+                    <th>kasba, shikarpur</th>
+                </tr>
+            </table>
+
+        </div>
     </main>
     <footer></footer>
 </body>
