--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             </div>
             <div class="container-right">
-                <img class="hardy" src="images/hardy.png" alt="">
+                <img src="images/hardy.png" alt="">
 
 
             </div>
@@ -43,25 +43,98 @@
 
     </header>
     <main>
+        <!-- the first section start -->
+        <section>
         <div class="about-container">
             <h3 class="title"> About Me </h3>
             <p class="para">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
-            <table>
-                <tr class="th">
-                    <td>Name:</td>
-                    <td>Email:</td>
-                    <td>date of birth</td>
-                    <td>form</th>
-                </tr>
-                <tr class="td">
-                    <th>Mary Hardy</th>
-                    <th>info@gmail.com</th>
-                    <th>11 November 1987</th>
-                    <th>kasba, shikarpur</th>
-                </tr>
-            </table>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <p class="info-title">Name:
+                    </p>
+                    <h4 class="info-para"> Mary Hardy</h4>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Email:
+                    </p>
+                    <h4 class="info-para">info@gmail.com</h4>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Date of birth:
+                    </p>
+                    <h4 class="info-para">11 November 1987</h4>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">From:
+                    </p>
+                    <h4 class="info-para">Los Angeles, USA</h4>
+                </div>
+            </div>
 
         </div>
+    </section>
+    <!-- the first section end -->
+    <!-- the sceond section start -->
+    <section>
+        <h3 class="title">What I do</h3>
+        <p class="para">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+
+    </section>
+    <!-- the second section end -->
+     <!-- the second section start -->
+     <section>
+        <div class="skill-container">
+            <div class="skill-main">
+                <img src="images/icons/js.png" alt="">
+                <h3 class="skill-title">Vanilla JavaScript</h3>
+                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill-main">
+                <img src="images/icons/react.png" alt="">
+                <h3 class="skill-title">React</h3>
+                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill-main">
+                <img src="images/icons/nodejs.png" alt="">
+                <h3 class="skill-title">Node.js</h3>
+                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill-main">
+                <img src="images/icons/mongo.png" alt="">
+                <h3 class="skill-title">MongoDB</h3>
+                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+        </div>
+
+     </section>
+      <!-- the thrid section end -->
+       <!-- the fourth section start -->
+       <section>
+        <h3 class="title">A summary of My Resume</h3>
+        <div class="my-self">
+           <div class="my-sellf-left">
+            <h4 class="my-self-h4">My Education</h4>
+            <h5 class="my-self-h5">Master in Computer Engineering</h5>
+            <h6 class="my-self-h6">
+                Harvard University / 2015 - 2017
+            </h6>
+            <p class="my-self-descript">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+           </div>
+           <hr class="hr">
+           <div class="my-sellf-right">
+            <h4 class="my-self-h4">My Experience</h4>
+            <h5 class="my-self-h5">Sr. Font End Developer</h5>
+            <h6 class="my-self-h6">
+                Apple Inc / 2020 - Current
+            </h6>
+            <p class="my-self-descript">
+                List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+            </p>
+           </div>
+        </div>
+       </section>
     </main>
     <footer></footer>
 </body>
