--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>project-practices-2</title>
 </head>
 <body>
@@ -27,8 +28,8 @@
                 <h1>Mary Hardy</h1>
                 <p class="common-p">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <div class="button">
-                <button class="btn bts">Download CV</button>
-                <button class="btn btns">
+                <button class="btn bts"> <i class="fas fa-download"></i> Download CV</button>
+                <button class="btn btns"><img src="" alt="">
                      Contact</button>
             </div>
 
@@ -113,6 +114,7 @@
         <h3 class="title">A summary of My Resume</h3>
         <div class="my-self">
            <div class="my-sellf-left">
+            <div class="my-self-left-1">
             <h4 class="my-self-h4">My Education</h4>
             <h5 class="my-self-h5">Master in Computer Engineering</h5>
             <h6 class="my-self-h6">
@@ -120,9 +122,31 @@
             </h6>
             <p class="my-self-descript">List skill/technologies here. You can change the icon above 
                 to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                <hr>
+            </div>
+            <div class="my-self-left-1">
+                <h4 class="my-self-h4">My Education</h4>
+                <h5 class="my-self-h5">Master in Computer Engineering</h5>
+                <h6 class="my-self-h6">
+                    Harvard University / 2015 - 2017
+                </h6>
+                <p class="my-self-descript">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <hr>
+                </div>
+                <div class="my-self-left-1">
+                    <h4 class="my-self-h4">My Education</h4>
+                    <h5 class="my-self-h5">Master in Computer Engineering</h5>
+                    <h6 class="my-self-h6">
+                        Harvard University / 2015 - 2017
+                    </h6>
+                    <p class="my-self-descript">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <hr>
+                    </div>
            </div>
-           <hr class="hr">
            <div class="my-sellf-right">
+            <div class="div-self-right-1">
             <h4 class="my-self-h4">My Experience</h4>
             <h5 class="my-self-h5">Sr. Font End Developer</h5>
             <h6 class="my-self-h6">
@@ -132,9 +156,40 @@
                 List skill/technologies here. You can change the icon above 
                 to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
             </p>
+            <hr>
+           </div>
+           <div class="div-self-right-1">
+            <h4 class="my-self-h4">My Experience</h4>
+            <h5 class="my-self-h5">Sr. Font End Developer</h5>
+            <h6 class="my-self-h6">
+                Apple Inc / 2020 - Current
+            </h6>
+            <p class="my-self-descript">
+                List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+            </p>
+            <hr>
+           </div>
+           <div class="div-self-right-1">
+            <h4 class="my-self-h4">My Experience</h4>
+            <h5 class="my-self-h5">Sr. Font End Developer</h5>
+            <h6 class="my-self-h6">
+                Apple Inc / 2020 - Current
+            </h6>
+            <p class="my-self-descript">
+                List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+            </p>
+            <hr>
+           </div>
            </div>
         </div>
+        <div class="donwlod-btn">
+        <button class="btn"><i class="fas fa-download"></i> Download CV</button>
+    </div>
        </section>
+       <!-- the fourth section end -->
+       
     </main>
     <footer></footer>
 </body>
