--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p class="common-p">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <div class="button">
                 <button class="btn bts"> <i class="fas fa-download"></i> Download CV</button>
-                <button class="btn btns"><img src="" alt="">
+                <button class="btn btns"><i class="fas fa-phone"></i>
                      Contact</button>
             </div>
 
@@ -191,6 +191,30 @@
        <!-- the fourth section end -->
        
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-main">
+                <div class="footer-main-left">
+                <h3 class="footer-main-left-h3">Lets Connect</h3>
+                <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <div class="fd-img">
+                <img src="images/icons/facebook.png" alt="facebook">
+                <img src="images/icons/twitter.png" alt="tw">
+                <img src="images/icons/insta.png" alt="insta">
+            </div>
+            </div>
+            <div class="footer-main-right">
+                <h3 class="footer-main-left-h3">Let’s Message me</h3>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Your name">
+                    <input type="email" name="" id="" placeholder="Your email">
+                    <textarea name="" id="" cols="10" rows="5" placeholder="Message"></textarea>
+                    <input class="btn" type="submit" value="submit">
+                </form>
+
+            </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
